@@ -202,3 +202,65 @@ void suggest_noatime(void)
 	}
 	fclose(file);
 }
+
+void powersched_on(void)
+{
+	FILE *file;
+	file = fopen("/sys/devices/system/cpu/sched_mc_power_savings", "w");
+	if (!file)
+		return;
+	fprintf(file,"1");
+	fclose(file);
+}
+
+void suggest_powersched(void)
+{
+	FILE *file;
+	char buffer[1024];
+	int suggest = 0;
+	int cpu;
+	
+	file = fopen("/sys/devices/system/cpu/sched_mc_power_savings","r");
+	if (!file)
+		return;
+	memset(buffer, 0, 1024);
+	if (!fgets(buffer, 1023, file)) {
+		fclose(file);
+		return;
+	}
+	fclose(file);
+	if (buffer[0]!='0')
+		return;
+	/* ok so power saving scheduler is off; now to see if we actually have a multi-package system */
+	cpu =  sysconf(_SC_NPROCESSORS_ONLN);
+
+	if (cpu<2)
+		return; /* UP system */
+
+	file = fopen("/proc/cpuinfo", "r");
+	suggest = 1;
+	if (!file)
+		return;
+	while (!feof(file)) {
+		memset(buffer, 0, 1024);
+		char *c;
+		if (!fgets(buffer, 1023, file))
+			break;
+		if (strstr(buffer, "cpu cores")) {
+			c = strchr(buffer, ':');
+			if (!c) 
+				continue;
+			if (strtoll(c, NULL, 10) >= cpu)
+				suggest = 0;
+		}
+	}
+	fclose(file);
+
+
+	if (suggest) {
+		add_suggestion( _("Suggestion: enable the power aware CPU scheduler with the following command:\n"
+		 	"  echo 1 > /sys/devices/system/cpu/sched_mc_power_savings\n"
+			"or by pressing the C key."), 5, 'C', _(" C - Power aware CPU scheduler "), powersched_on);
+	}
+	fclose(file);
+}
